--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ video {
   background-color: transparent;
   color: #575756;
   box-shadow: inset 0px 0px 0px 4px #ddd6e8;
+  border-radius: 10px;
 }
 .list{
   display: flex;
@@ -28,14 +29,15 @@ video {
 }
 li{
   background-color: #ddd6e8;
-  padding: 10px;
-    margin: 10px;
+  border-radius: 10px;
+  padding: 7px;
+  margin: 4px;
+  font-family: 'Open Sans', sans-serif;
+  list-style-type: none;
+}
+h1, h2, h3, ul, p {
     font-family: 'Open Sans', sans-serif;
-    list-style-type: none;
-  }
-  h1, h2, h3, ul, p {
-    font-family: 'Open Sans', sans-serif;
-  }
+}
 .icon{
   width: 30px;
 }
@@ -44,4 +46,7 @@ button {
   border-radius: 12px;
   border: none;
   background-color: #dbecc4;
-  }
+}
+img{
+  border-radius: 15px;
+}
